<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Layout_Background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Top Card for User Info -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Profile Image -->
                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/student_icon"
                    android:scaleType="centerCrop"
                    android:contentDescription="dp"
                    android:layout_marginBottom="16dp" />

                <!-- User Name -->
                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_user_name"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_gravity="center_horizontal" />

                <!-- Email -->
                <TextView
                    android:id="@+id/userEmailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_email"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Second Card for More Details -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Student Id: "
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp" />
                    <!-- Student ID -->
                    <TextView
                        android:id="@+id/studentIdTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_student_id"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Department: "
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp" />
                    <!-- Student ID -->
                    <TextView
                        android:id="@+id/departmentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_department"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Batch: "
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp" />
                    <!-- Student ID -->
                    <!-- Batch -->
                    <TextView
                        android:id="@+id/batchTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_batch"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp" />

                </LinearLayout>

                <!-- Department -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Section: "
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp" />
                    <!-- Student ID -->

                    <!-- Section -->
                    <TextView
                        android:id="@+id/sectionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_section"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp" />

                </LinearLayout>




            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Edit Profile Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button"
            android:padding="12dp"
            android:textStyle="bold"
            android:textSize="16sp" >
        </androidx.appcompat.widget.AppCompatButton>


        <!-- Log Out Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="Change Password"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button"
            android:padding="12dp"
            android:textStyle="bold"
            android:textSize="16sp" >
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

</ScrollView>
